# corshub

./: .actrc  .coverage  .gitignore  .sops.yaml  .vars  BACKLOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.changelog/: +auth-ratelimit.feature.md  +rtcm-udp.feature.md
.dev/: compose.yml
.dev/conf/: cache.json  oidc.json
.dev/config/: prometheus.yml
.dev/config/grafana/provisioning/dashboards/: corshub.yml
.dev/tools/: simulate-base-station.py
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.github/PULL_REQUEST_TEMPLATE/: onboard.md  rotate.md
.github/scripts/: onboard.py
.github/workflows/: deploy.yml  docs.yml  helm.yml  image.yml  onboard.yml  pypi.yml
docker/: Dockerfile  entrypoint.sh
docs/architecture/: rtcm-udp.md
examples/: here4.py  rtcm_corrections.rtcm
grafana/: corshub.json
helm/: Chart.yaml  values.yaml
helm/files/opa/policies/: README.md  base_station.rego  rover.rego  utils.rego
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  metrics-service.yaml  opa-configmap.yaml  opa-deployment.yaml  opa-service.yaml  rtcm-secret.yaml  rtcm-service.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statistics-configmap.yaml  statistics-deployment.yaml  statistics-httproute.yaml  statistics-ingress.yaml  statistics-service.yaml
ops/: README.md  key-fingerprints.yaml  values.yaml
proto/corshub/rtcm/v1/: rtcm_udp.proto
src/corshub/: __init__.py  __version__.py  constants.py  env.py  json.py  jwt.py  logging.py  metrics.py
src/corshub/crypto/: base.py  hash.py  secrets.py  sign.py
src/corshub/exceptions/: http.py
src/corshub/http/: __init__.py  cookies.py  middleware.py  ratelimit.py  security.py  sessions.py  utils.py  websocket.py
src/corshub/ntrip/v2/: caster.py  headers.py  quality.py  sourcetable.py  transport.py
src/corshub/oidc/: __init__.py  base.py  constants.py
src/corshub/opa/: __init__.py  client.py
src/corshub/rtcm/: keys.py  tokens.py  udp.py
src/corshub/rtcm/v1/: rtcm_udp_pb2.py  rtcm_udp_pb2.pyi
src/corshub/services/: base.py  versions.py
src/corshub/services/v1/metrics/: __init__.py  base.py
src/corshub/services/v1/ntrip/: __init__.py  base.py  nearest.py  put.py  quality.py  read.py  sourcetable.py
src/corshub/services/v1/rtcm/: __init__.py  base.py  jwks.py  session.py
src/opa/data/: rovers.json  stations.json
src/opa/data/corshub/: rovers.json  stations.json
src/opa/policies/corshub/: base_station.rego  rover.rego  utils.rego
tests/: conftest.py  test_jwt.py  test_ratelimit.py
tests/ntrip/: test_arp_detection.py  test_caster.py  test_gga_streaming.py  test_gnssntripclient.py  test_headers.py  test_nmea.py  test_routes.py  test_rtcm_frame_buffer.py  test_session_timeout.py  test_sourcetable.py  test_transport.py
tests/rtcm/: test_endpoints.py  test_signing.py  test_tokens.py  test_udp.py
tools/: here4-base-caster.py
