[project]
name = "corshub"
version = "0.0.1.dev0"
description = "Python-based NTRIP caster for aggregating RTK corrections from a network of CORS base stations and distributing them to NTRIP clients."
authors = [
    { name = "Joeri Hermans", email = "joeri@peinser.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "bcrypt>=5.0.0",
    "isodate>=0.7.2",
    "jwt>=1.4.0",
    "orjson>=3.11.7",
    "pyrtcm>=1.1.12",
    "pyserial>=3.5",
    "pyubx2>=1.2.60",
    "rich>=14.3.3",
    "sanic>=25.12.0",
]

[dependency-groups]
dev = [
    "anybadge>=1.14.0",
    "bandit>=1.7.5",
    "bpython>=0.24",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "towncrier>=23.11.0",
    "uvloop>=0.19.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-gen-files>=0.4.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.1.3",
    "mkdocs-section-index>=0.3.4",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.ruff]
fix = false
unfixable = [
    "ERA", # do not autoremove commented out code
]
target-version = "py314"
line-length = 120
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
extend-exclude = ["docs/*", "tests/fixtures/exceptions/*"]

ignore = [
    "E722", # Bare exceptions
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = []
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
files = ["src/corshub", "tests"]
pretty = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.towncrier]
directory = ".changelog"
package = "corshub"
name = "corshub"
package_dir = "src"
filename = "CHANGELOG.md"
title_format = "{version} ({project_date})"

[tool.coverage.run]
branch = true
omit = ["src/corshub/__init__.py", "src/corshub/__version__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
