[project]
name = "corshub"
version = "0.0.1.dev0"
description = "Python-based NTRIP caster for aggregating RTK corrections from a network of CORS base stations and distributing them to NTRIP clients."
authors = [
    { name = "Joeri Hermans", email = "joeri@peinser.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.0",
    "bcrypt>=5.0.0",
    "cachetools>=7.1.4",
    "isodate>=0.7.2",
    "orjson>=3.11.9",
    "pyjwt>=2.13.0",
    "pynmeagps>=1.1.4",
    "pyrtcm>=1.1.12",
    "pyserial>=3.5",
    "pyubx2>=1.3.1",
    "rich>=15.0.0",
    "prometheus-client>=0.21.0",
    "sanic>=25.12.1",
    "cryptography>=49.0.0",
    "protobuf>=7.35.1",
]

[dependency-groups]
dev = [
    "anybadge>=1.14.0",
    "bandit>=1.7.5",
    "bpython>=0.24",
    "mypy>=2.1.0",
    "pygnssutils>=1.2.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.16",
    "sanic-testing>=24.6.0",
    "towncrier>=23.11.0",
    "uvloop>=0.19.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-gen-files>=0.4.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.1.3",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=1.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corshub"]

[tool.ruff]
fix = false
target-version = "py314"
line-length = 120
extend-exclude = ["docs/*", "tests/fixtures/exceptions/*", "**/*_pb2.py", "**/*_pb2.pyi"]

[tool.ruff.lint]
unfixable = [
    "ERA", # do not autoremove commented out code
]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "E722", # Bare exceptions
    "TID252", # Prefer absolute imports over relative imports
    "SIM105", # Use `contextlib.suppress(asyncio.QueueFull, RuntimeError)` instead of `try`-`except`-`pass`
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use conventions the production rules forbid.
"tests/**" = [
    "ERA001", # commented-out scaffolding for planned test cases is kept intentionally
    "RUF006", # fire-and-forget background tasks in fixtures are deliberate
    "RUF002", # ambiguous unicode (×, →) used on purpose in test docstrings
    "N806",   # PascalCase locals for mock classes (e.g. MockReader)
    "C408",   # dict(...) builders read fine in test data setup
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = []
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
files = ["src/corshub", "tests"]
# Generated protobuf modules (.py and .pyi) are not type-checked.
exclude = ['_pb2\.pyi?$']
pretty = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.towncrier]
directory = ".changelog"
package = "corshub"
name = "corshub"
package_dir = "src"
filename = "CHANGELOG.md"
title_format = "{version} ({project_date})"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["src/corshub/__init__.py", "src/corshub/__version__.py"]

[tool.coverage.report]
show_missing = true
# Enforced ratchet floor: this is the *current* coverage, locked in so it cannot
# regress. The target remains 75 — raise this number as tests are added rather
# than leaving the gate disabled (which is how it silently drifted before).
fail_under = 58
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
